--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,6 +1,5 @@
 .content {
   max-width: 1280px;
-  padding: 0 20px;
   width: 100%;
   margin: 0 auto;
   background-color: #fcf5e5;
