--- a/blocks/header.css
+++ b/blocks/header.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   background-color: #fff;
-  padding: 10px 20px;
+  padding: 10px 0;
 }
 
 .header__image {
