--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,8 +2,6 @@
   min-height: 100vh;
   max-width: 1440px;
   margin: 0 auto;
-  min-width: 100%;
-  padding: 0 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
